--- a/evaluation_scripts/evaluation_two_metric.ipynb
+++ b/evaluation_scripts/evaluation_two_metric.ipynb
@@ -5,7 +5,7 @@
    "id": "62f295e5-f16e-4343-a733-ef61a294446d",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/[USER]/[REPO]/blob/[BRANCH]/[NOTEBOOK_FILE].ipynb" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
