--- a/evaluation_scripts/evaluation_two_metric.ipynb
+++ b/evaluation_scripts/evaluation_two_metric.ipynb
@@ -5,7 +5,7 @@
    "id": "62f295e5-f16e-4343-a733-ef61a294446d",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/REELICIT/reqbrain_rep_package/blob/3344cfbf610656025f7c0cfa9ae7a313bfdcd0c6/evaluation_scripts/evaluation_two_metric.ipynb" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
