--- a/evaluation_scripts/paper_visualisations.ipynb
+++ b/evaluation_scripts/paper_visualisations.ipynb
@@ -36,7 +36,7 @@
     "tags": []
    },
    "source": [
-    "# Instruct Dataset Training and Validation Sets Distribution (Fig. 1 on the paper)"
+    "# Instruct Dataset Training and Validation Sets Distribution (Fig. 2 on the paper)"
    ]
   },
   {
@@ -187,7 +187,7 @@
     "tags": []
    },
    "source": [
-    "# Spider Chart: Evaluating Models per Task (BERT and FRUGAL scores) (Fig. 2 on the paper)"
+    "# Spider Chart: Evaluating Models per Task (BERT and FRUGAL scores) (not presented on the paper)"
    ]
   },
   {
