--- a/evaluation_scripts/paper_visualisations.ipynb
+++ b/evaluation_scripts/paper_visualisations.ipynb
@@ -187,7 +187,7 @@
     "tags": []
    },
    "source": [
-    "# Spider Chart: Evaluating Models per Task (BERT and FRUGAL scores) (not presented on the paper)"
+    "# Spider Chart: Evaluating Models per Task (BERT and FRUGAL scores) (extra: not presented on the paper)"
    ]
   },
   {
