--- a/inferencing_all_trained_models/all_models_used_with_langchain/falcon-instruct_inferance.ipynb
+++ b/inferencing_all_trained_models/all_models_used_with_langchain/falcon-instruct_inferance.ipynb
@@ -5,7 +5,7 @@
    "id": "a706923f-a517-489c-b197-17d296a77dd9",
    "metadata": {},
    "source": [
-    "<a href=\"\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/REELICIT/reqbrain_rep_package/blob/d6f1edc5fb5f41bdb4a6a9105b37c378ab4c96aa/inferencing_all_trained_models/all_models_used_with_langchain/falcon-instruct_inferance.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
