--- a/inferencing_all_trained_models/all_models_used_with_langchain/falcon_inferance.ipynb
+++ b/inferencing_all_trained_models/all_models_used_with_langchain/falcon_inferance.ipynb
@@ -5,7 +5,7 @@
    "id": "f6d5e8dc-4cab-4b90-869f-7ffb2dd8e31d",
    "metadata": {},
    "source": [
-    "<a href=\"https://github.com//REELICIT/reqbrain_rep_package/blob/ee75058cf6ca3ff6fdf3cd6eeb1566ba61e95d24/inferencing_all_trained_models/all_models_used_with_langchain/falcon_inferance.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github//REELICIT/reqbrain_rep_package/blob/ee75058cf6ca3ff6fdf3cd6eeb1566ba61e95d24/inferencing_all_trained_models/all_models_used_with_langchain/falcon_inferance.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ] 
   },
   {
