--- a/inferencing_all_trained_models/all_models_used_with_langchain/llama-instruct_inferance.ipynb
+++ b/inferencing_all_trained_models/all_models_used_with_langchain/llama-instruct_inferance.ipynb
@@ -5,7 +5,7 @@
    "id": "044fe8b4-b91a-4fb4-86c6-532325b10d3c",
    "metadata": {},
    "source": [
-    "<a href=\"\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github//REELICIT/reqbrain_rep_package/blob/ee75058cf6ca3ff6fdf3cd6eeb1566ba61e95d24/inferencing_all_trained_models/all_models_used_with_langchain/llama-instruct_inferance.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
