--- a/inferencing_all_trained_models/all_models_used_with_langchain/zephyr_inferance.ipynb
+++ b/inferencing_all_trained_models/all_models_used_with_langchain/zephyr_inferance.ipynb
@@ -5,7 +5,7 @@
    "id": "1f3466a1-d9aa-43c3-8e2e-c4156229e5f3",
    "metadata": {},
    "source": [
-    "<a href=\"\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github//REELICIT/reqbrain_rep_package/blob/ee75058cf6ca3ff6fdf3cd6eeb1566ba61e95d24/inferencing_all_trained_models/all_models_used_with_langchain/zephyr_inferance.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
