--- a/training_scripts/train_mistralai.ipynb
+++ b/training_scripts/train_mistralai.ipynb
@@ -7,7 +7,7 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/REELICIT/reqbrain_rep_package/blob/b06577966b0c087398e2299883ba41e3f02cb669/training_scripts/train_mistralai.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
