--- a/evaluation_scripts/paper_visualisations.ipynb
+++ b/evaluation_scripts/paper_visualisations.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "62f295e5-f16e-4343-a733-ef61a294446d",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/REELICIT/reqbrain_rep_package/blob/3344cfbf610656025f7c0cfa9ae7a313bfdcd0c6/evaluation_scripts/paper_visualisations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "933e1ec1-d09f-41ce-a93f-dd29023e5ff5",
    "metadata": {},
    "source": [
