--- a/inferencing_all_trained_models/data_science_experiment_for_RQs_2_3_4/ReqBrain_zephyr_data_science_experiment.ipynb
+++ b/inferencing_all_trained_models/data_science_experiment_for_RQs_2_3_4/ReqBrain_zephyr_data_science_experiment.ipynb
@@ -245,7 +245,7 @@
    "id": "44d50c38-cb16-40f6-bbe4-35904de21308",
    "metadata": {},
    "source": [
-    "## RQ2 (table IV)"
+    "## RQ2 (table V)"
    ]
   },
   {
@@ -294,7 +294,7 @@
    "id": "d62fef09-5f45-4c6d-99ca-a9ff0b4598f7",
    "metadata": {},
    "source": [
-    "## RQ3 (tavle V)"
+    "## RQ3 (table VI: column ReqBrain Generated Requirements)"
    ]
   },
   {
@@ -344,7 +344,7 @@
    "id": "acb11a15-96ba-407d-8e30-5e472135824d",
    "metadata": {},
    "source": [
-    "## RQ4 (table VI)"
+    "## RQ4 (table VII)"
    ]
   },
   {
@@ -418,7 +418,7 @@
    "id": "2cdf7c67-bd93-4c66-9083-732679decf29",
    "metadata": {},
    "source": [
-    "### Seq. #1 (shown on table VI)"
+    "### Seq. #1 (shown on table VII)"
    ]
   },
   {
@@ -492,7 +492,7 @@
    "id": "d7b580c8-24f0-4c13-90ad-e754b025d716",
    "metadata": {},
    "source": [
-    "### Seq. #2 (shown on table VI)"
+    "### Seq. #2 (shown on table VII)"
    ]
   },
   {
@@ -566,7 +566,7 @@
    "id": "6270deec-4b16-4f65-a65b-fdbb0d621500",
    "metadata": {},
    "source": [
-    "### Seq. #3 (shown on table VI)"
+    "### Seq. #3 (shown on table VII)"
    ]
   },
   {
@@ -644,7 +644,7 @@
    "id": "6b635d56-759d-4db8-bacc-d4ad9912cf8c",
    "metadata": {},
    "source": [
-    "### Seq. #4 (shown on table VI)"
+    "### Seq. #4 (shown on table VII)"
    ]
   },
   {
