--- a/inferencing_all_trained_models/data_science_experiment_for_RQs_2_3_4/untrained_zephyr_data_science_experiment.ipynb
+++ b/inferencing_all_trained_models/data_science_experiment_for_RQs_2_3_4/untrained_zephyr_data_science_experiment.ipynb
@@ -251,7 +251,7 @@
    "id": "44d50c38-cb16-40f6-bbe4-35904de21308",
    "metadata": {},
    "source": [
-    "## RQ2 (see table IV, Under Column Untrained Model Requirments)"
+    "## RQ2 (see table V: colum Untrained Model Requirements (Zephyr-7b-beta))"
    ]
   },
   {
